deploy: 657e4254603efb38a3f65355186e363d96caba82

--- a/main/tutorials/l_master.ipynb
+++ b/main/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fc171f46",
+   "id": "13fa1928",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46282481",
+   "id": "400efe47",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3323fbe",
+   "id": "86fc6f7d",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1073f5a",
+   "id": "6c90bf1d",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e32a989f",
+   "id": "42a0f752",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85fa5c8c",
+   "id": "f82fd11f",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "65163f6b",
+   "id": "fe1aac7b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-14T16:49:39.634500Z",
-     "iopub.status.busy": "2025-04-14T16:49:39.634325Z",
-     "iopub.status.idle": "2025-04-14T16:49:42.658063Z",
-     "shell.execute_reply": "2025-04-14T16:49:42.657531Z"
+     "iopub.execute_input": "2025-04-22T17:10:45.933264Z",
+     "iopub.status.busy": "2025-04-22T17:10:45.933091Z",
+     "iopub.status.idle": "2025-04-22T17:10:49.006930Z",
+     "shell.execute_reply": "2025-04-22T17:10:49.006318Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55b7d67a",
+   "id": "d820c4ba",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3abc347d",
+   "id": "6c5fe6bc",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a79dc1ec",
+   "id": "d335f83f",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "189fcb52",
+   "id": "0f2feee1",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6e162f7",
+   "id": "f4fe0bdf",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfb087de",
+   "id": "a2dd28ec",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e9a45cf",
+   "id": "8273a89c",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09a72eb9",
+   "id": "2991e989",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9664f989",
+   "id": "407fe2f2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-14T16:49:42.660225Z",
-     "iopub.status.busy": "2025-04-14T16:49:42.659932Z",
-     "iopub.status.idle": "2025-04-14T16:49:44.672948Z",
-     "shell.execute_reply": "2025-04-14T16:49:44.672326Z"
+     "iopub.execute_input": "2025-04-22T17:10:49.009349Z",
+     "iopub.status.busy": "2025-04-22T17:10:49.008787Z",
+     "iopub.status.idle": "2025-04-22T17:10:51.157445Z",
+     "shell.execute_reply": "2025-04-22T17:10:51.156918Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10f8ae4c",
+   "id": "7a5f360a",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "db1865cc",
+   "id": "25b6bf58",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-14T16:49:44.674870Z",
-     "iopub.status.busy": "2025-04-14T16:49:44.674678Z",
-     "iopub.status.idle": "2025-04-14T16:49:44.678036Z",
-     "shell.execute_reply": "2025-04-14T16:49:44.677399Z"
+     "iopub.execute_input": "2025-04-22T17:10:51.159337Z",
+     "iopub.status.busy": "2025-04-22T17:10:51.159138Z",
+     "iopub.status.idle": "2025-04-22T17:10:51.162712Z",
+     "shell.execute_reply": "2025-04-22T17:10:51.162140Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "423d2dca",
+   "id": "a47baeed",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23cc5f60",
+   "id": "5bfd457b",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cd40bf3",
+   "id": "9fe86731",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3e2036c",
+   "id": "d0e73b03",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e25007e3",
+   "id": "1c52d222",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-14T16:49:44.679735Z",
-     "iopub.status.busy": "2025-04-14T16:49:44.679557Z",
-     "iopub.status.idle": "2025-04-14T16:49:44.723193Z",
-     "shell.execute_reply": "2025-04-14T16:49:44.722564Z"
+     "iopub.execute_input": "2025-04-22T17:10:51.164390Z",
+     "iopub.status.busy": "2025-04-22T17:10:51.164207Z",
+     "iopub.status.idle": "2025-04-22T17:10:51.210441Z",
+     "shell.execute_reply": "2025-04-22T17:10:51.209954Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50133828",
+   "id": "1b30a8e9",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "76e86c65",
+   "id": "4f3504b1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-14T16:49:44.725093Z",
-     "iopub.status.busy": "2025-04-14T16:49:44.724722Z",
-     "iopub.status.idle": "2025-04-14T16:49:44.790572Z",
-     "shell.execute_reply": "2025-04-14T16:49:44.790046Z"
+     "iopub.execute_input": "2025-04-22T17:10:51.212413Z",
+     "iopub.status.busy": "2025-04-22T17:10:51.212216Z",
+     "iopub.status.idle": "2025-04-22T17:10:51.283687Z",
+     "shell.execute_reply": "2025-04-22T17:10:51.283054Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46adbbd6",
+   "id": "cd1ae4db",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80c116c4",
+   "id": "704faa60",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5b58bbbc",
+   "id": "e93dd230",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-14T16:49:44.792588Z",
-     "iopub.status.busy": "2025-04-14T16:49:44.792216Z",
-     "iopub.status.idle": "2025-04-14T16:49:44.817991Z",
-     "shell.execute_reply": "2025-04-14T16:49:44.817501Z"
+     "iopub.execute_input": "2025-04-22T17:10:51.285874Z",
+     "iopub.status.busy": "2025-04-22T17:10:51.285416Z",
+     "iopub.status.idle": "2025-04-22T17:10:51.314880Z",
+     "shell.execute_reply": "2025-04-22T17:10:51.314255Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8625871",
+   "id": "6655bf52",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67326b6e",
+   "id": "4d5b3710",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bdfcebc",
+   "id": "e2f23fb9",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d928fb4",
+   "id": "158a4160",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34187cf7",
+   "id": "cfc30739",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "aa0d1707",
+   "id": "0d9d5576",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-14T16:49:44.820031Z",
-     "iopub.status.busy": "2025-04-14T16:49:44.819676Z",
-     "iopub.status.idle": "2025-04-14T16:49:44.823943Z",
-     "shell.execute_reply": "2025-04-14T16:49:44.823284Z"
+     "iopub.execute_input": "2025-04-22T17:10:51.317078Z",
+     "iopub.status.busy": "2025-04-22T17:10:51.316674Z",
+     "iopub.status.idle": "2025-04-22T17:10:51.321126Z",
+     "shell.execute_reply": "2025-04-22T17:10:51.320561Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64430626",
+   "id": "0127aeb2",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "47d54f81",
+   "id": "9be0f1dd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-14T16:49:44.825955Z",
-     "iopub.status.busy": "2025-04-14T16:49:44.825611Z",
-     "iopub.status.idle": "2025-04-14T16:49:44.828678Z",
-     "shell.execute_reply": "2025-04-14T16:49:44.828105Z"
+     "iopub.execute_input": "2025-04-22T17:10:51.323088Z",
+     "iopub.status.busy": "2025-04-22T17:10:51.322630Z",
+     "iopub.status.idle": "2025-04-22T17:10:51.325745Z",
+     "shell.execute_reply": "2025-04-22T17:10:51.325118Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "484ee243",
+   "id": "ca0a59c4",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d35a19e5",
+   "id": "f1cf68b6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-14T16:49:44.830507Z",
-     "iopub.status.busy": "2025-04-14T16:49:44.830172Z",
-     "iopub.status.idle": "2025-04-14T16:49:47.419244Z",
-     "shell.execute_reply": "2025-04-14T16:49:47.418601Z"
+     "iopub.execute_input": "2025-04-22T17:10:51.327400Z",
+     "iopub.status.busy": "2025-04-22T17:10:51.327223Z",
+     "iopub.status.idle": "2025-04-22T17:10:53.992035Z",
+     "shell.execute_reply": "2025-04-22T17:10:53.991416Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d078bfa",
+   "id": "c31a535f",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b828794",
+   "id": "989f8857",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79de182a",
+   "id": "ade1653c",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3ba9d3b",
+   "id": "3a9de6e3",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "165e89e5",
+   "id": "ee61d86f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-14T16:49:47.421492Z",
-     "iopub.status.busy": "2025-04-14T16:49:47.421034Z",
-     "iopub.status.idle": "2025-04-14T16:49:47.424572Z",
-     "shell.execute_reply": "2025-04-14T16:49:47.423848Z"
+     "iopub.execute_input": "2025-04-22T17:10:53.994196Z",
+     "iopub.status.busy": "2025-04-22T17:10:53.993777Z",
+     "iopub.status.idle": "2025-04-22T17:10:53.997438Z",
+     "shell.execute_reply": "2025-04-22T17:10:53.996891Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f03585c6520>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f0bad4d7740>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc9d85a5",
+   "id": "88cceea1",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31501986",
+   "id": "c68806b8",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f5cdaf9",
+   "id": "c9166ef2",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a23ff7b5",
+   "id": "6cf0dc06",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "bddbb1af",
+   "id": "da871105",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-14T16:49:47.426462Z",
-     "iopub.status.busy": "2025-04-14T16:49:47.426050Z",
-     "iopub.status.idle": "2025-04-14T16:49:47.429176Z",
-     "shell.execute_reply": "2025-04-14T16:49:47.428606Z"
+     "iopub.execute_input": "2025-04-22T17:10:53.999278Z",
+     "iopub.status.busy": "2025-04-22T17:10:53.999094Z",
+     "iopub.status.idle": "2025-04-22T17:10:54.002344Z",
+     "shell.execute_reply": "2025-04-22T17:10:54.001855Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9bce39a1",
+   "id": "ce0ef5d9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-14T16:49:47.430930Z",
-     "iopub.status.busy": "2025-04-14T16:49:47.430580Z",
-     "iopub.status.idle": "2025-04-14T16:49:48.501422Z",
-     "shell.execute_reply": "2025-04-14T16:49:48.500865Z"
+     "iopub.execute_input": "2025-04-22T17:10:54.003922Z",
+     "iopub.status.busy": "2025-04-22T17:10:54.003701Z",
+     "iopub.status.idle": "2025-04-22T17:10:55.098649Z",
+     "shell.execute_reply": "2025-04-22T17:10:55.098031Z"
     }
    },
    "outputs": [
@@ -671,7 +671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
