--- a/main/tutorials/l_master.ipynb
+++ b/main/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "13fa1928",
+   "id": "7c3d9371",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "400efe47",
+   "id": "fbc6086b",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86fc6f7d",
+   "id": "57270fbf",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c90bf1d",
+   "id": "365f4ed1",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42a0f752",
+   "id": "498cd120",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f82fd11f",
+   "id": "ecea8a30",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fe1aac7b",
+   "id": "dbf944f6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-22T17:10:45.933264Z",
-     "iopub.status.busy": "2025-04-22T17:10:45.933091Z",
-     "iopub.status.idle": "2025-04-22T17:10:49.006930Z",
-     "shell.execute_reply": "2025-04-22T17:10:49.006318Z"
+     "iopub.execute_input": "2025-04-22T17:46:17.103437Z",
+     "iopub.status.busy": "2025-04-22T17:46:17.103267Z",
+     "iopub.status.idle": "2025-04-22T17:46:20.034568Z",
+     "shell.execute_reply": "2025-04-22T17:46:20.034038Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d820c4ba",
+   "id": "c1fbe3c8",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c5fe6bc",
+   "id": "7c1c6e66",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d335f83f",
+   "id": "1a5f8f5c",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f2feee1",
+   "id": "935bc14b",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4fe0bdf",
+   "id": "6caea154",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2dd28ec",
+   "id": "622ee993",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8273a89c",
+   "id": "9a4fd1ff",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2991e989",
+   "id": "dbace4ea",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "407fe2f2",
+   "id": "6b413916",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-22T17:10:49.009349Z",
-     "iopub.status.busy": "2025-04-22T17:10:49.008787Z",
-     "iopub.status.idle": "2025-04-22T17:10:51.157445Z",
-     "shell.execute_reply": "2025-04-22T17:10:51.156918Z"
+     "iopub.execute_input": "2025-04-22T17:46:20.036975Z",
+     "iopub.status.busy": "2025-04-22T17:46:20.036501Z",
+     "iopub.status.idle": "2025-04-22T17:46:21.990388Z",
+     "shell.execute_reply": "2025-04-22T17:46:21.989870Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a5f360a",
+   "id": "24cd4f0b",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "25b6bf58",
+   "id": "880f5937",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-22T17:10:51.159337Z",
-     "iopub.status.busy": "2025-04-22T17:10:51.159138Z",
-     "iopub.status.idle": "2025-04-22T17:10:51.162712Z",
-     "shell.execute_reply": "2025-04-22T17:10:51.162140Z"
+     "iopub.execute_input": "2025-04-22T17:46:21.992210Z",
+     "iopub.status.busy": "2025-04-22T17:46:21.992024Z",
+     "iopub.status.idle": "2025-04-22T17:46:21.995507Z",
+     "shell.execute_reply": "2025-04-22T17:46:21.994958Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a47baeed",
+   "id": "1b6f9616",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bfd457b",
+   "id": "9cf227ed",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fe86731",
+   "id": "eb360a01",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0e73b03",
+   "id": "4aa785c1",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1c52d222",
+   "id": "c8e4742b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-22T17:10:51.164390Z",
-     "iopub.status.busy": "2025-04-22T17:10:51.164207Z",
-     "iopub.status.idle": "2025-04-22T17:10:51.210441Z",
-     "shell.execute_reply": "2025-04-22T17:10:51.209954Z"
+     "iopub.execute_input": "2025-04-22T17:46:21.997407Z",
+     "iopub.status.busy": "2025-04-22T17:46:21.996975Z",
+     "iopub.status.idle": "2025-04-22T17:46:22.039866Z",
+     "shell.execute_reply": "2025-04-22T17:46:22.039343Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b30a8e9",
+   "id": "9e6a6313",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4f3504b1",
+   "id": "96da22a7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-22T17:10:51.212413Z",
-     "iopub.status.busy": "2025-04-22T17:10:51.212216Z",
-     "iopub.status.idle": "2025-04-22T17:10:51.283687Z",
-     "shell.execute_reply": "2025-04-22T17:10:51.283054Z"
+     "iopub.execute_input": "2025-04-22T17:46:22.041689Z",
+     "iopub.status.busy": "2025-04-22T17:46:22.041502Z",
+     "iopub.status.idle": "2025-04-22T17:46:22.107082Z",
+     "shell.execute_reply": "2025-04-22T17:46:22.106541Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd1ae4db",
+   "id": "eb765840",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "704faa60",
+   "id": "a9474c39",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e93dd230",
+   "id": "f9d7748e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-22T17:10:51.285874Z",
-     "iopub.status.busy": "2025-04-22T17:10:51.285416Z",
-     "iopub.status.idle": "2025-04-22T17:10:51.314880Z",
-     "shell.execute_reply": "2025-04-22T17:10:51.314255Z"
+     "iopub.execute_input": "2025-04-22T17:46:22.109018Z",
+     "iopub.status.busy": "2025-04-22T17:46:22.108834Z",
+     "iopub.status.idle": "2025-04-22T17:46:22.135037Z",
+     "shell.execute_reply": "2025-04-22T17:46:22.134520Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6655bf52",
+   "id": "ab72daa8",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d5b3710",
+   "id": "d604081a",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2f23fb9",
+   "id": "3fc5a3a5",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "158a4160",
+   "id": "28ea8f7b",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfc30739",
+   "id": "4bcef521",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0d9d5576",
+   "id": "e0bd2950",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-22T17:10:51.317078Z",
-     "iopub.status.busy": "2025-04-22T17:10:51.316674Z",
-     "iopub.status.idle": "2025-04-22T17:10:51.321126Z",
-     "shell.execute_reply": "2025-04-22T17:10:51.320561Z"
+     "iopub.execute_input": "2025-04-22T17:46:22.137016Z",
+     "iopub.status.busy": "2025-04-22T17:46:22.136636Z",
+     "iopub.status.idle": "2025-04-22T17:46:22.141003Z",
+     "shell.execute_reply": "2025-04-22T17:46:22.140417Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0127aeb2",
+   "id": "bfad246e",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9be0f1dd",
+   "id": "d52a2551",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-22T17:10:51.323088Z",
-     "iopub.status.busy": "2025-04-22T17:10:51.322630Z",
-     "iopub.status.idle": "2025-04-22T17:10:51.325745Z",
-     "shell.execute_reply": "2025-04-22T17:10:51.325118Z"
+     "iopub.execute_input": "2025-04-22T17:46:22.142550Z",
+     "iopub.status.busy": "2025-04-22T17:46:22.142387Z",
+     "iopub.status.idle": "2025-04-22T17:46:22.145530Z",
+     "shell.execute_reply": "2025-04-22T17:46:22.144861Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca0a59c4",
+   "id": "b84bcceb",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f1cf68b6",
+   "id": "87e5971f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-22T17:10:51.327400Z",
-     "iopub.status.busy": "2025-04-22T17:10:51.327223Z",
-     "iopub.status.idle": "2025-04-22T17:10:53.992035Z",
-     "shell.execute_reply": "2025-04-22T17:10:53.991416Z"
+     "iopub.execute_input": "2025-04-22T17:46:22.147260Z",
+     "iopub.status.busy": "2025-04-22T17:46:22.146936Z",
+     "iopub.status.idle": "2025-04-22T17:46:24.685807Z",
+     "shell.execute_reply": "2025-04-22T17:46:24.685197Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c31a535f",
+   "id": "00bc5e49",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "989f8857",
+   "id": "54a8bc68",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ade1653c",
+   "id": "8e131885",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a9de6e3",
+   "id": "8cf01db0",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ee61d86f",
+   "id": "215f8ab0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-22T17:10:53.994196Z",
-     "iopub.status.busy": "2025-04-22T17:10:53.993777Z",
-     "iopub.status.idle": "2025-04-22T17:10:53.997438Z",
-     "shell.execute_reply": "2025-04-22T17:10:53.996891Z"
+     "iopub.execute_input": "2025-04-22T17:46:24.688006Z",
+     "iopub.status.busy": "2025-04-22T17:46:24.687510Z",
+     "iopub.status.idle": "2025-04-22T17:46:24.691187Z",
+     "shell.execute_reply": "2025-04-22T17:46:24.690528Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f0bad4d7740>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f6a7c7809a0>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88cceea1",
+   "id": "74313bb1",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c68806b8",
+   "id": "168125ab",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9166ef2",
+   "id": "25e468a2",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cf0dc06",
+   "id": "955d01e2",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "da871105",
+   "id": "967e6f70",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-22T17:10:53.999278Z",
-     "iopub.status.busy": "2025-04-22T17:10:53.999094Z",
-     "iopub.status.idle": "2025-04-22T17:10:54.002344Z",
-     "shell.execute_reply": "2025-04-22T17:10:54.001855Z"
+     "iopub.execute_input": "2025-04-22T17:46:24.693097Z",
+     "iopub.status.busy": "2025-04-22T17:46:24.692750Z",
+     "iopub.status.idle": "2025-04-22T17:46:24.695840Z",
+     "shell.execute_reply": "2025-04-22T17:46:24.695191Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ce0ef5d9",
+   "id": "452b6393",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-22T17:10:54.003922Z",
-     "iopub.status.busy": "2025-04-22T17:10:54.003701Z",
-     "iopub.status.idle": "2025-04-22T17:10:55.098649Z",
-     "shell.execute_reply": "2025-04-22T17:10:55.098031Z"
+     "iopub.execute_input": "2025-04-22T17:46:24.697568Z",
+     "iopub.status.busy": "2025-04-22T17:46:24.697239Z",
+     "iopub.status.idle": "2025-04-22T17:46:25.752261Z",
+     "shell.execute_reply": "2025-04-22T17:46:25.751725Z"
     }
    },
    "outputs": [
